syntax = "proto3";

option objc_class_prefix = "RTG";

package TextGeneratorGRPC;

service TextResponseService {
  rpc RespondToText (Sentence) returns (Response);
}

message Sentence {
  string greeting = 1;
}

message Response {
  string reply = 1;
}